eureka单机测试完成

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>cloud-api-commons</module>
       <module>cloud-provider-payment8001</module>
       <module>cloud-consumer-order80</module>
+      <module>cloud-eureka-server7001</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -22,7 +23,7 @@
     <junit.version>4.12</junit.version>
     <log4j.version>1.2.17</log4j.version>
     <lombok.version>1.18.10</lombok.version>
-    <mysql.version>5.1.47</mysql.version>
+    <mysql.version>8.0.16</mysql.version>
     <druid.version>1.1.18</druid.version>
     <spring.boot.version>2.2.2.RELEASE</spring.boot.version>
     <spring.cloud.version>Hoxton.SR1</spring.cloud.version>
